[workspace]
resolver = "2"
members = ["crates/*", "examples/native", "examples/snark"]

[workspace.package]
version = "0.7.1"
edition = "2021"
license = "GPL-3.0"
authors = ["RND <dev@ringsnetwork.io>"]
repository = "https://github.com/RingsNetwork/rings-node"

[workspace.dependencies]
async-trait = "0.1.77"
js-sys = "0.3.64"
jsonrpc-core = "18.0.0"
rings-core = { path = "crates/core", default-features = false }
rings-derive = { path = "crates/derive", default-features = false }
rings-node = { path = "crates/node" }
rings-rpc = { path = "crates/rpc", default-features = false }
rings-snark = { path = "crates/snark", default-features = false }
rings-transport = { path = "crates/transport" }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen-macro-support = "0.2.100"
wasm-bindgen-test = "0.3.50"
webrtc = { version = "0.10.1" }

[profile.release]
opt-level = false
lto = true
strip = true
