[package]
name = "bns-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["webrtc", "tokio", "tokio-util", "bytes"]
wasm = ["web-sys", "wasm-bindgen", "js-sys",
        "wasm-bindgen-futures",
	"crossbeam-channel"]

[dependencies]
# global
anyhow = "1.0.45"
async-trait="0.1.52"
log = "0.4"
dashmap = "4"
base64 = "0.13.0"
hex = "0.4.3"
web3 = { version = "0.18.0", features = ["signing"] }
secp256k1 = "0.21"
serde_json = { version="1.0.70"}
serde = { version = "1.0.130", features = ["derive"]}

# default
webrtc = { version = "0.3.3", optional=true}
tokio = { version = "1.13.0", features = ["full"], optional=true}
tokio-util = { version = "0.6.9", optional=true}
bytes = { version="1.1.0", optional=true}
futures = "0.3.21"

# wasm
wasm-bindgen = {version = "0.2.67", features = ["serde-serialize"], optional=true }
wasm-bindgen-futures = {version="0.4.17", optional=true}
js-sys = { version="0.3.44", optional=true}
crossbeam-channel = {version="0.5", optional=true}


[dependencies.web-sys]
version = "0.3.44"
optional = true
features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcSessionDescription",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcConfiguration",
  "RtcIceConnectionState"
]
