[package]
name = "bns-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["webrtc", "tokio", "tokio-util", "bytes", "async-channel"]
wasm = [
  "web-sys",
  "wasm-bindgen",
  "js-sys",
  "wasm-bindgen-futures",
]

[dependencies]
# global
anyhow = "1.0.45"
async-trait = "0.1.52"
log = "0.4"
dashmap = "4"
hex = "0.4.3"
num-bigint = "0.3.1"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand_hc = "0.3.1"
libsecp256k1 = "0.7.0"
serde_json = { version = "1.0.70" }
serde = { version = "1.0.130", features = ["derive"] }
futures = { version = "0.3.21" }
chrono = { version = "0.4.19", features = ["wasmbind"] }
base58-monero = { version = "0.3", default-features = false, features = ["check"] }
async-stream = "0.3.2"
futures-core = "0.3.21"
futures-util = "0.3.21"
uuid = "0.8.2"


# default
webrtc = { version = "0.3.3", optional = true }
tokio = { version = "1.13.0", features = ["full"], optional = true }
tokio-util = { version = "0.6.9", optional = true }
bytes = { version = "1.1.0", optional = true }
async-channel = { version = "1.6.1", optional = true }

# wasm
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.29", optional = true }
js-sys = { version = "0.3.56", optional = true }

[dependencies.web-sys]
version = "0.3.56"
optional = true
features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcSessionDescription",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcConfiguration",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
]

[target.'cfg(target_family="wasm")'.dependencies]
web3 = { package = "web3", version = "0.18.0", features = ["wasm"], default-features = false }

[target.'cfg(not(target_family="wasm"))'.dependencies]
web3 = { package = "web3", version = "0.18.0" }



[dev-dependencies]
wasm-bindgen-test = "0.3.0"