[package]
name = "rings-core"
version = "0.2.5"
edition = "2021"
authors = ["RND <dev@ringsnetwork.io>"]
description = "Chord DHT implementation with ICE"
repository = "https://github.com/RingsNetwork/rings-node"
license = "GPL-3.0"
readme = "README.md"
keywords = ["Chord", "DHT", "Web3", "P2P", "WASM"]
categories = ["network-programming", "cryptography", "wasm"]

[features]
default = ["std"]
std = [
    "webrtc",
    "async-channel",
    "sled",
    "web3/http-rustls-tls",
    "futures/default",
    "uuid/v4",
    "uuid/serde",
]
dummy = ["std", "lazy_static"]
wasm = [
    "web-sys",
    "wasm-bindgen",
    "js-sys",
    "wasm-bindgen-futures",
    "rexie",
    "serde-wasm-bindgen",
    "web3/wasm",
    "futures",
    "uuid/wasm-bindgen",
    "uuid/v4",
    "uuid/serde",
]
browser_chrome_test = ["wasm"]

[dependencies]
# global
arrayref = "0.3.6"
async-lock = "2.5.0"
async-recursion = "1.0.0"
async-stream = "0.3.2"
async-trait = "0.1.52"
base58 = "0.2.0"
base58-monero = { version = "0.3", default-features = false, features = ["check"] }
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
chrono = { version = "0.4.19", features = ["wasmbind"] }
dashmap = "5"
derivative = "2.2.0"
ecies = { version = "0.2", default-features = false, features = ["pure"] }
ed25519 = "1.5.2"
ed25519-dalek = "1.0.1"
flate2 = { version = "1.0.22" }
futures-timer = "3.0.2"
hex = "0.4.3"
itertools = "0.10.3"
libsecp256k1 = "0.7.0"
num-bigint = "0.3.1"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand_hc = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.70" }
sha1 = "0.10.1"
thiserror = "1"
tracing = "0.1.37"
url = { version = "2", features = ["serde"] }

futures = { version = "0.3.21", default-features = false, optional = true }
uuid = { version = "0.8.2", optional = true }
web3 = { version = "0.18.0", default-features = false, optional = true }

# default and dummy
async-channel = { version = "1.6.1", optional = true }
sled = { version = "0.34.7", optional = true }
webrtc = { version = "0.6.0", optional = true }

# dummy
lazy_static = { version = "1.4.0", optional = true }

# wasm
js-sys = { version = "0.3.56", optional = true }
rexie = { version = "0.4.1", optional = true }
serde-wasm-bindgen = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.33", optional = true }
web-sys = { version = "0.3.56", optional = true, features = [
    "Window",
    "Navigator",
    "MessageEvent",
    "MediaStreamConstraints",
    "MediaDevices",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcIceServer",
    "RtcSessionDescriptionInit",
    "RtcSessionDescription",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcIceCredentialType",
    "RtcLifecycleEvent",
    "console",
    "Blob",
] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.15", features = ["ansi"] }
tracing-wasm = "0.2.1"
wasm-bindgen-test = "0.3.0"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
tokio = { version = "1.13.0", features = ["full"] }
