[package]
name = "rings-derive"
version = "0.3.2"
edition = "2021"
authors = ["RND <dev@ringsnetwork.io>"]
repository = "https://github.com/RingsNetwork/rings-node"
license = "GPL-3.0"
description = "Helper macros for rings node implementation."

[lib]
proc-macro = true

[features]
core_crate = []
default = [
]
wasm = [
    "wasm-bindgen-macro-support",
]

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.27"
wasm-bindgen-macro-support = { workspace = true, optional = true }
wasmer = { version = "3.3.0", optional = true }
