[package]
name = "rings-extension"
version = "0.1.0"
edition = "2021"
authors = ["RND <dev@ringsnetwork.io>"]
repository = "https://github.com/RingsNetwork/rings-node"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
quote = { version = "1.0.28", optional = true }
rings-derive = { package = "rings-derive", path = "../derive", default-features = false, version = "0.1.0" }
wasm-bindgen = { workspace = true, optional = true }
