[package]
name = "rings-core"
version = "0.2.1"
edition = "2021"
authors = ["RND <dev@ringsnetwork.io>"]
description = "Chord DHT implementation with ICE"
repository = "https://github.com/RingsNetwork/rings-node"
license = "GPL-3.0"
readme = "README.md"
keywords = ["Chord", "DHT", "Web3", "P2P", "WASM"]
categories = ["network-programming", "cryptography", "wasm"]

[features]
default = ["webrtc", "async-channel", "sled"]
dummy = ["webrtc", "async-channel", "sled", "lazy_static"]
wasm = ["web-sys", "wasm-bindgen", "js-sys", "wasm-bindgen-futures", "rexie"]
browser_chrome_test = ["wasm"]

[dependencies]
# global
arrayref = "0.3.6"
async-lock = "2.5.0"
async-recursion = "1.0.0"
async-stream = "0.3.2"
async-trait = "0.1.52"
base58 = "0.2.0"
base58-monero = { version = "0.3", default-features = false, features = ["check"] }
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
chrono = { version = "0.4.19", features = ["wasmbind"] }
dashmap = "5"
ecies = { version = "0.2", default-features = false, features = ["pure"] }
ed25519 = "1.5.2"
ed25519-dalek = "1.0.1"
flate2 = { version = "1.0.22" }
futures-timer = "3.0.2"
hex = "0.4.3"
itertools = "0.10.3"
libsecp256k1 = "0.7.0"
num-bigint = "0.3.1"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand_hc = "0.3.1"
sha1 = "0.10.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.70" }
thiserror = "1"
tracing = "0.1.37"
url = { version = "2", features = ["serde"] }

# default and dummy
async-channel = { version = "1.6.1", optional = true }
sled = { version = "0.34.7", optional = true }
webrtc = { version = "0.4.0", optional = true }

# dummy
lazy_static = { version = "1.4.0", optional = true }

# wasm
js-sys = { version = "0.3.56", optional = true }
rexie = { version = "0.4.1", optional = true }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.30", optional = true }
[dependencies.web-sys]
features = [
    "Window",
    "Navigator",
    "MessageEvent",
    "MediaStreamConstraints",
    "MediaDevices",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcIceServer",
    "RtcSessionDescriptionInit",
    "RtcSessionDescription",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcIceCredentialType",
    "RtcLifecycleEvent",
    "console",
    "Blob",
]
optional = true
version = "0.3.56"

[target.'cfg(target_family="wasm")'.dependencies]
web3 = { package = "web3", version = "0.18.0", features = ["wasm"], default-features = false }
futures = { package = "futures", version = "0.3.21", default-features = false }
uuid = { package = "uuid", version = "0.8.2", features = ["wasm-bindgen", "v4", "serde"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
web3 = { package = "web3", version = "0.18.0" }
futures = { package = "futures", version = "0.3.21" }
uuid = { package = "uuid", version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-test = "0.3.0"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
tokio = { version = "1.13.0", features = ["full"] }
