[package]
name = "rings-rpc"
description = """
Rings is a structured peer-to-peer network implementation using WebRTC, Chord algorithm, and full WebAssembly (WASM) support.
"""
readme = "README.md"
keywords = ["Chord", "DHT", "Web3", "P2P", "WASM"]
categories = ["network-programming", "cryptography", "wasm"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["rings-core/default", "reqwest", "tonic"]
wasm = ["rings-core/wasm", "reqwest-wasm"]

[dependencies]
base64 = { version = "0.13.0" }
http = "0.2.6"
jsonrpc-core = { version = "18.0.0" }
jsonrpc-pubsub = { version = "18.0.0" }
prost = "0.12.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true, default-features = false }
reqwest-wasm = { version = "0.11", features = ["json", "rustls-tls"], optional = true, default-features = false }
rings-core = { workspace = true, optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.70"
thiserror = "1"
tonic = { version = "0.10.2", optional = true }

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.10.2"
