[package]
name = "rings-rpc"
description = """
Rings is a structured peer-to-peer network implementation using WebRTC, Chord algorithm, and full WebAssembly (WASM) support.
"""
readme = "README.md"
keywords = ["Chord", "DHT", "Web3", "P2P", "WASM"]
categories = ["network-programming", "cryptography", "wasm"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["rings-core/default", "reqwest"]
wasm = ["rings-core/wasm", "reqwest-wasm"]

[dependencies]
async-trait = "0.1.73"
base64 = { version = "0.13.0" }
bytes = "1.5.0"
http = "0.2.6"
jsonrpc-core = { workspace = true }
prost = "0.12.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true, default-features = false }
reqwest-wasm = { version = "0.11", features = ["json", "rustls-tls"], optional = true, default-features = false }
rings-core = { workspace = true, optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.70"
thiserror = "1"

[build-dependencies]
prost-build-config = "0.5.0"
serde_yaml = "0.9.27"
