[package]
name = "rings-swarm"
version = "0.3.0"
edition = "2021"
authors = ["RND <dev@ringsnetwork.io>"]
description = "Swarm construction for Rings Core"
repository = "https://github.com/RingsNetwork/rings-node"
readme = "README.md"
license = "GPL-3.0"
categories = ["network-programming", "cryptography"]

[dependencies]
rings-transport = { workspace = true }
