[package]
name = "rings-transport"
version = "0.3.0"
edition = "2021"

[features]
# Include nothing by default
default = []
dummy = ["native-webrtc", "rand", "lazy_static", "tokio/time"]
native-webrtc = ["webrtc"]
web-sys-webrtc = ["wasm-bindgen", "js-sys", "web-sys", "wasm-bindgen-futures"]

[dependencies]
# Dependencies for native-webrtc feature
webrtc = { version = "0.8.0", optional = true }

# Dependencies for dummy feature
lazy_static = { version = "1.4.0", optional = true }
rand = { version = "0.8.5", optional = true, features = ["getrandom"] }
tokio = { version = "1.32.0", optional = true }

# Dependencies for web-sys-webrtc feature
js-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { version = "0.3.64", optional = true, features = [
    "Blob",
    "MessageEvent",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcIceCredentialType",
    "RtcIceGatheringState",
    "RtcIceServer",
    "RtcPeerConnection",
    "RtcPeerConnectionState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcStatsReport",
] }

# Common dependencies
async-trait = "0.1.73"
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.30", features = ["wasmbind"] }
dashmap = "5.5.1"
serde = "1.0.183"
serde_json = "1.0.106"
thiserror = "1.0.47"
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
